feat: AI Agent优化与后端体验提升
- AI退票添加场次时间校验（开场前2小时内不可退）
- 长对话历史截断为最近20条，避免超出上下文窗口
- LLM兜底抽取条件收紧，减少偶发延迟
- 附近场次查询不再报错，无电影名时返回附近所有场次
- 场次卡片补充影厅名（注入HallMapper）
- 时间窗口描述统一为前后2小时
- SSE超时从120s增加到300s，避免ReAct多轮调用超时
- Prompt优化：全额退款/推荐最近上映/退票后不查全部订单/槽位满必须调工具